tests/update/attribute_table_multiple/test.stderr
error: Only one `#[crud_table]` attribute is allowed
 --> tests/update/attribute_table_multiple/test.rs:5:3
  |
5 | #[crud_table("test_table_2")]
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `update` found for struct `Test` in the current scope
  --> tests/update/attribute_table_multiple/test.rs:18:6
   |
6  |   struct Test {
   |   ----------- method `update` not found for this struct
...
14 |       let _result = Test {
   |  ___________________-
15 | |         id: 1,
16 | |         name: "Debbie".to_string(),
17 | |     }
18 | |     .update()
   | |     -^^^^^^ method not found in `Test`
   | |_____|
   |
